Replace deprecated constructors for native Java types with the recommended factory methods.