@@ -140,9 +140,9 @@ class HandlerImpl implements HttpHandler {
 			try {
 				timer = startTimerForRequest(exchange);
 		        if (outputRequestAndDuration) {
-		        	localStartTime = new Long(MiscHelper.currentTimeWithMilliResolution());
+		        	localStartTime = Long.valueOf(MiscHelper.currentTimeWithMilliResolution());
 		        	if (SQLTime.isEnabled()) {
-		        		localSQLStartTime = new Long(SQLTime.getSQLTime());
+		        		localSQLStartTime = Long.valueOf(SQLTime.getSQLTime());
 		        	}
 		        }
 				next.handleRequest(exchange);
